--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,3 @@
-version: '3.7'
 services:
   elasticsearch:
     image: docker.elastic.co/elasticsearch/elasticsearch:8.10.0
@@ -49,3 +48,6 @@ services:
       - /var/log/nginx:/var/log/nginx
     depends_on:
       - elasticsearch
+
+volumes:
+  es_data:
