--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,13 +1,13 @@
 services:
   elasticsearch:
-    image: docker.elastic.co/elasticsearch/elasticsearch:8.10.0
+    image: docker.elastic.co/elasticsearch/elasticsearch:8.17.0
     container_name: elasticsearch
     environment:
-      - node.name=es01
-      - cluster.name=elastic-cluster
       - discovery.type=single-node
+      - cluster.name=elastic-cluster
       - bootstrap.memory_lock=true
-      - "ES_JAVA_OPTS=-Xms512m -Xmx512m"
+      - xpack.security.enabled=true
+      - ELASTIC_PASSWORD=changeme
     ulimits:
       memlock:
         soft: -1
@@ -15,11 +15,10 @@ services:
     ports:
       - "9200:9200"
     volumes:
-      - ./config/elasticsearch/elasticsearch.yml:/usr/share/elasticsearch/config/elasticsearch.yml
       - es_data:/usr/share/elasticsearch/data
 
   kibana:
-    image: docker.elastic.co/kibana/kibana:8.10.0
+    image: docker.elastic.co/kibana/kibana:8.17.0
     container_name: kibana
     environment:
       - ELASTICSEARCH_HOSTS=http://elasticsearch:9200
@@ -29,25 +28,28 @@ services:
       - elasticsearch
 
   logstash:
-    image: docker.elastic.co/logstash/logstash:8.10.0
+    image: docker.elastic.co/logstash/logstash:8.17.0
     container_name: logstash
+    environment:
+      - LS_JAVA_OPTS=-Xmx1g -Xms1g      
     volumes:
-      - ./config/logstash/logstash.conf:/usr/share/logstash/pipeline/logstash.conf
+      - ./config/logstash.conf:/usr/share/logstash/pipeline/logstash.conf
     ports:
       - "5044:5044"
-      - "9600:9600"
     depends_on:
       - elasticsearch
 
   filebeat:
-    image: docker.elastic.co/beats/filebeat:8.10.0
+    image: docker.elastic.co/beats/filebeat:8.17.0
     container_name: filebeat
-    user: root
+
     volumes:
-      - ./config/filebeat/filebeat.yml:/usr/share/filebeat/filebeat.yml
-      - /var/log/nginx:/var/log/nginx
+      - ./config/filebeat.yml:/usr/share/filebeat/filebeat.yml
+      - /var/log:/var/log:ro
     depends_on:
       - elasticsearch
+      - logstash
 
 volumes:
   es_data:
+    driver: local
