--- a/config/logstash/logstash.conf
+++ b/config/logstash/logstash.conf
@@ -10,14 +10,14 @@ filter {
   }
   date {
     match => [ "timestamp", "dd/MMM/yyyy:HH:mm:ss Z" ]
-    target => "@timestamp"
   }
 }
 
 output {
   elasticsearch {
     hosts => ["http://elasticsearch:9200"]
-    index => "nginx-logs-%{+yyyy.MM.dd}"
+    index => "webapp-logs-%{+YYYY.MM.dd}"
+    user => "elastic"
+    password => "changeme"
   }
-  stdout { codec => rubydebug }
 }
